--- a/Signal/translations/pt_BR.lproj/Localizable.strings
+++ b/Signal/translations/pt_BR.lproj/Localizable.strings
@@ -7856,7 +7856,7 @@
 "UNSUPPORTED_FEATURE_ERROR" = "Seu aparelho é incompatível com esta funcionalidade.";
 
 /* Description for the unverified safety number change. Embeds {name of contact with identity change} */
-"UNVERIFIED_SAFETY_NUMBER_CHANGE_DESCRIPTION_FORMAT" = "O número de segurança associado a {0} mudou, possivelmente devido à reinstalação do Signal ou à mudança de aparelho. Toque em Verificar para confirmar o novo número de segurança. Esta etapa é opcional.";
+"UNVERIFIED_SAFETY_NUMBER_CHANGE_DESCRIPTION_FORMAT" = "O número de segurança associado a %1$@ mudou, possivelmente devido à reinstalação do Signal ou à mudança de aparelho. Toque em Verificar para confirmar o novo número de segurança. Esta etapa é opcional.";
 
 /* Action to verify a safety number after it has changed */
 "UNVERIFIED_SAFETY_NUMBER_VERIFY_ACTION" = "Verificar";
